--- a/Full website/package.json
+++ b/Full website/package.json
@@ -4,9 +4,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "dev:full": "node start-dev.js",
     "build": "vite build",
-    "build:demo": "VITE_DEMO_MODE=true vite build",
+    "build:demo": "node build-demo.js",
     "preview": "vite preview",
     "test": "vitest --run",
     "format.fix": "prettier --write .",
@@ -14,6 +13,9 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@mediapipe/camera_utils": "^0.3.1675466862",
+    "@mediapipe/drawing_utils": "^0.3.1675466124",
+    "@mediapipe/hands": "^0.4.1675469240",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
@@ -41,11 +43,12 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
-    "@react-three/fiber": "^8.18.0",
     "@react-three/drei": "^10.1.2",
+    "@react-three/fiber": "^8.18.0",
     "@swc/core": "^1.11.24",
     "@tanstack/react-query": "^5.56.2",
     "@types/three": "^0.176.0",
+    "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -62,6 +65,7 @@
     "react-resizable-panels": "^2.1.3",
     "react-router-dom": "^6.26.2",
     "recharts": "^2.12.7",
+    "socket.io-client": "^4.8.1",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
